--- a/frontend/create.html
+++ b/frontend/create.html
@@ -89,12 +89,16 @@
 
                     <section id="pref_inputs">
                         <div class="pref_row">
-                            <label>Select Temperature Preference: </label>
-                            <select id="temp_pref" name="temp_pref" class="pref_select" required>
-                                <option value = "high">High</option>
-                                <option value = "medium">Medium</option>
-                                <option value = "low">Low</option>
-                            </select>
+                            <label>Enter Temperature Preference (°C): </label>
+                            <input
+                                type="text"
+                                id="temp_pref"
+                                name="temp_pref"
+                                class="temp_input"
+                                pattern="^-?\d{1,3}(\.\d{1,3})?$"
+                                placeholder="000.000"
+                                required
+                            />
                         </div>
                         <div class="pref_row">
                             <label>Select Precipitation Preference: </label>
@@ -107,7 +111,7 @@
                     </section>
 
                     <section id = "date_inputs">
-                        <label> Select Trip Date:</label>
+                        <label> Enter Trip Date:</label>
                         <div class="date_row">
                             <label>From:</label>
                             <input
@@ -171,12 +175,7 @@
 
                     <button type = "submit" id ="submit_trip">Submit Trip</button>
                 </form>
-                <section id="error_messages">
-                    <p id="error_city_dne">ERROR these cities don't exist:</p>
-                    <p id="error_date_dne">ERROR these dates don't exist:</p>
-                    <p id="error_date_range">ERROR the date range is greater than 7</p>
-                    <p>Please fix the error(s) and resubmit</p>
-                </section>
+                <section id="error_messages"></section>
                 <datalist id="us-states">
                     <option value="AL"></option>
                     <option value="AK"></option>
