Dynamic rank and warning elements completed

--- a/frontend/create.html
+++ b/frontend/create.html
@@ -242,12 +242,7 @@
                     <button id="discard_button">Discard Trip</button>
                 </section>
 
-                <section id="warning_messages">
-                    <p>WARNING you've reached your 5 trip limit, saving this trip will replace your oldest trip</p>
-                    <p>WARNING these locations contain bad days:</p>
-                    <p>WARNING these locations contain rainy days:</p>
-                    <p>Please consider these warnings before saving your trip</p>
-                </section>
+                <section id="warning_messages"></section>
             </section>
         </main>
         <script src="script.js"></script>
