--- a/frontend/create.html
+++ b/frontend/create.html
@@ -175,7 +175,7 @@
 
                     <button type = "submit" id ="submit_trip">Submit Trip</button>
                 </form>
-                <section id="error_messages"></section>
+                <section class="error" id="error_messages"></section>
                 <datalist id="us-states">
                     <option value="AL"></option>
                     <option value="AK"></option>
@@ -241,8 +241,8 @@
                     <button id="confirm_button">Confirm Trip</button>
                     <button id="discard_button">Discard Trip</button>
                 </section>
-
-                <section id="warning_messages"></section>
+                <section class="success" id="success_message"></section>
+                <section class="warning" id="warning_messages"></section>
             </section>
         </main>
         <script src="script.js"></script>
