--- a/frontend/create.html
+++ b/frontend/create.html
@@ -174,6 +174,7 @@
                     </section>
 
                     <button type = "submit" id ="submit_trip">Submit Trip</button>
+                    <section class="loading" id="loading_message"></section>
                 </form>
                 <section class="error" id="error_messages"></section>
                 <datalist id="us-states">
